samples/_failures_safe/1761426668_b79f5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_829212f6.c: In function ‘print_state’:
./samples/SAFE/__tmp_829212f6.c:151:16: error: missing terminating " character
  151 |         printf("Current state: %s\n
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_829212f6.c:151:9: error: expected expression at end of input
  151 |         printf("Current state: %s\n
      |         ^~~~~~
./samples/SAFE/__tmp_829212f6.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_829212f6.c:151:9: error: expected declaration or statement at end of input
